examples/invalid/05_BadMonadArgKind.lune
module Bad exposing (x)

x : Monad Int => Int
x = 1

